--- a/src/Smartstore.Web/Views/Shared/Partials/ShopBar.Tools.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/ShopBar.Tools.cshtml
@@ -4,6 +4,24 @@
     string accountUrl = Model.IsAuthenticated ? Url.Action("Info", "Customer") : Url.RouteUrl("Login", new { returnUrl = Context.Request.Query["returnUrl"].ToString() });
     var labelStyle = Display.GetThemeVariable<string>("shopbar-label", "warning");
     var numTools = 2 + (Model.CompareProductsEnabled ? 1 : 0) + (Model.WishlistEnabled ? 1 : 0) + (Model.ShoppingCartEnabled ? 1 : 0);
+
+    var badgeCssClasses = "badge badge-pill badge-counter badge-counter-ring label-cart-amount badge-" + labelStyle;
+
+    var offcanvasAttributes = new AttributeDictionary
+    {
+        ["data-toggle"] = "offcanvas",
+        ["data-autohide"] = "true",
+        ["data-fullscreen"] = "false",
+        ["data-disablescrolling"] = "true",
+        ["aria-expanded"] = "false"
+    };
+
+    var cartTogglerAttributes = new AttributeDictionary();
+    cartTogglerAttributes.AddRange(offcanvasAttributes);
+    cartTogglerAttributes.Add("class", "shopbar-button navbar-toggler");
+    cartTogglerAttributes.Add("data-placement", "end");
+    cartTogglerAttributes.Add("data-target", "#offcanvas-cart");
+    cartTogglerAttributes.Add("aria-controls", "offcanvas-cart");
 }
 
 <div class="shopbar-col shopbar-tools"
@@ -12,9 +30,13 @@
 
     @*Hamburger Menu*@
     <div class="shopbar-tool d-lg-none" id="shopbar-menu">
-        <a id="offcanvas-menu-opener" class="shopbar-button" href="#" 
-           data-toggle="offcanvas" data-autohide="true" data-placement="start" data-fullscreen="false" data-disablescrolling="true" data-target="#offcanvas-menu"
-           aria-controls="offcanvas-menu" aria-expanded="false">
+        <a id="offcanvas-menu-opener" 
+           class="shopbar-button" 
+           href="#" 
+           attrs="offcanvasAttributes"
+           data-placement="start" 
+           data-target="#offcanvas-menu"
+           aria-controls="offcanvas-menu">
             <span class="shopbar-button-icon" aria-hidden="true">
                 <i class="icm icm-menu"></i>
             </span>
@@ -39,12 +61,10 @@
     </div>
 
     <div sm-if="Model.CompareProductsEnabled" class="shopbar-tool" id="shopbar-compare" data-target="#compare-tab">
-        <a asp-action="CompareProducts" asp-controller="Catalog" asp-area="" class="shopbar-button navbar-toggler"
-           data-toggle="offcanvas" data-summary-href="@Url.Action("CartSummary", "ShoppingCart", new { compare = true })"
-           data-autohide="true" data-placement="end" data-fullscreen="false" data-disablescrolling="true" data-target="#offcanvas-cart">
+        <a asp-action="CompareProducts" asp-controller="Catalog" asp-area="" attrs="cartTogglerAttributes" data-summary-href="@Url.Action("CartSummary", "ShoppingCart", new { compare = true })">
             <span class="shopbar-button-icon" aria-hidden="true">
                 <i class="icm icm-repeat"></i>
-                <span class='badge badge-pill badge-counter badge-counter-ring label-cart-amount badge-@labelStyle' attr-style='(Model.CompareItemsCount == 0, "display: none")' data-bind-to="CompareItemsCount">
+                <span class='@badgeCssClasses' attr-style='(Model.CompareItemsCount == 0, "display: none")' data-bind-to="CompareItemsCount">
                     @Model.CompareItemsCount
                 </span>
             </span>
@@ -59,11 +79,10 @@
     </div>
 
     <div sm-if="Model.WishlistEnabled" class="shopbar-tool" id="shopbar-wishlist" data-target="#wishlist-tab">
-        <a asp-route="Wishlist" class="shopbar-button navbar-toggler" data-toggle="offcanvas" data-summary-href="@Url.Action("CartSummary", "ShoppingCart", new { wishlist = true })"
-           data-autohide="true" data-placement="end" data-fullscreen="false" data-disablescrolling="true" data-target="#offcanvas-cart">
+        <a asp-route="Wishlist" attrs="cartTogglerAttributes" data-summary-href="@Url.Action("CartSummary", "ShoppingCart", new { wishlist = true })">
             <span class="shopbar-button-icon" aria-hidden="true">
                 <i class="icm icm-heart"></i>
-                <span class='badge badge-pill badge-counter badge-counter-ring label-cart-amount badge-@labelStyle' attr-style='(Model.WishlistItemsCount == 0, "display: none")' data-bind-to="WishlistItemsCount">
+                <span class='@badgeCssClasses' attr-style='(Model.WishlistItemsCount == 0, "display: none")' data-bind-to="WishlistItemsCount">
                     @Model.WishlistItemsCount
                 </span>
             </span>
@@ -78,11 +97,10 @@
     </div>
 
     <div sm-if="Model.ShoppingCartEnabled" class="shopbar-tool" id="shopbar-cart" data-target="#cart-tab">
-        <a asp-route="ShoppingCart" class="shopbar-button navbar-toggler" data-toggle="offcanvas" data-summary-href="@Url.Action("CartSummary", "ShoppingCart", new { cart = true })"
-           data-autohide="true" data-placement="end" data-fullscreen="false" data-disablescrolling="true" data-target="#offcanvas-cart">
+        <a asp-route="ShoppingCart" attrs="cartTogglerAttributes" data-summary-href="@Url.Action("CartSummary", "ShoppingCart", new { cart = true })">
             <span class="shopbar-button-icon" aria-hidden="true">
                 <i class="icm icm-bag"></i>
-                <span class='badge badge-pill badge-counter badge-counter-ring label-cart-amount badge-@(labelStyle)' attr-style='(Model.CartItemsCount == 0, "display: none")' data-bind-to="CartItemsCount">
+                <span class='@badgeCssClasses' attr-style='(Model.CartItemsCount == 0, "display: none")' data-bind-to="CartItemsCount">
                     @Model.CartItemsCount
                 </span>
             </span>
@@ -100,8 +118,13 @@
 </div>
 
 <widget target-zone="end" key="offcanvas-menu">
-    <aside id="offcanvas-menu" class="offcanvas offcanvas-shadow" data-blocker="true" data-overlay="true" 
-           aria-hidden="true" aria-labelledby="offcanvas-menu-opener" tabindex="-1">
+    <aside id="offcanvas-menu" 
+           class="offcanvas offcanvas-shadow" 
+           data-blocker="true" 
+           data-overlay="true" 
+           aria-hidden="true" 
+           aria-labelledby="offcanvas-menu-opener" 
+           tabindex="-1">
         <div class="offcanvas-content">
             <div id="offcanvas-menu-container" data-url="@(Url.Action("OffCanvas", "Menu"))">
                 @*Ajax content will be rendered here*@
@@ -111,7 +134,13 @@
 </widget>
 
 <widget target-zone="end" key="offcanvas-cart">
-    <aside id="offcanvas-cart" class="offcanvas offcanvas-end offcanvas-lg offcanvas-shadow" data-lg="true" data-blocker="true" data-overlay="true">
+    <aside id="offcanvas-cart" 
+           class="offcanvas offcanvas-end offcanvas-lg offcanvas-shadow" 
+           data-lg="true" 
+           data-blocker="true" 
+           data-overlay="true"           
+           aria-label="@T("Aria.Label.OffCanvasCartTab")"
+           tabindex="-1">
         <div class="offcanvas-content">
             @await Component.InvokeAsync("OffCanvasCart")
         </div>
