--- a/src/Smartstore.Web/Views/Menu/OffCanvas.Home.cshtml
+++ b/src/Smartstore.Web/Views/Menu/OffCanvas.Home.cshtml
@@ -14,20 +14,17 @@
     <div class="offcanvas-menu-header offcanvas-tabs" attr-class='(!showTabs, "d-none")'>
         <ul class="nav nav-tabs nav-tabs-line row no-gutters" role="tablist" aria-label="@T("Aria.Label.OffCanvasMenuTab")">
             <li sm-if="showNodes" class="nav-item col">
-                <a id="ocm-tab-menu" class="nav-link" data-toggle="tab" href="#ocm-menu" data-initialized="true"
-                   role="tab" aria-controls="ocm-menu" aria-selected="true" tabindex="0">
+                <a id="ocm-tab-menu" class="nav-link" data-toggle="tab" href="#ocm-menu" data-initialized="true" role="tab" aria-controls="ocm-menu" aria-selected="true" tabindex="0">
                     <span class="title">@T("Offcanvas.Menu.Categories")</span>
                 </a>
             </li>
             <li sm-if="showBrands" class="nav-item col">
-                <a id="ocm-tab-brands" class="nav-link" data-toggle="tab" href="#ocm-brands" data-url="@Url.Action("OffCanvasBrands", "Menu")" 
-                   role="tab" aria-controls="ocm-brands" aria-selected="false" tabindex="-1">
+                <a id="ocm-tab-brands" class="nav-link" data-toggle="tab" href="#ocm-brands" data-url="@Url.Action("OffCanvasBrands", "Menu")" role="tab" aria-controls="ocm-brands" aria-selected="false" tabindex="-1">
                     <span class="title">@T("Offcanvas.Menu.Brands")</span>
                 </a>
             </li>
             <li class="nav-item col">
-                <a id="ocm-tab-service" class="nav-link" data-toggle="tab" href="#ocm-service"
-                   role="tab" aria-controls="ocm-service" aria-selected="false" tabindex="-1">
+                <a id="ocm-tab-service" class="nav-link" data-toggle="tab" href="#ocm-service" role="tab" aria-controls="ocm-service" aria-selected="false" tabindex="-1">
                     <span class="title">@T("Offcanvas.Menu.Service")</span>
                 </a>
             </li>
@@ -35,8 +32,7 @@
     </div>
 
     <div class="tab-content offcanvas-menu-body offcanvas-scrollable">
-        <div sm-if="showNodes" class="tab-pane fade" id="ocm-menu" 
-             role="tabpanel" aria-labelledby="ocm-tab-menu">
+        <div sm-if="showNodes" class="tab-pane fade" id="ocm-menu" role="tabpanel" aria-labelledby="ocm-tab-menu">
             @{
                 // Prevent subsequent AJAX call from script by rendering the current submenu (either root level or a submenu)
                 if (Model != null)
@@ -45,10 +41,8 @@
                 }
             }
         </div>
-        <div sm-if="showBrands" class="tab-pane fade" id="ocm-brands" 
-             role="tabpanel" aria-labelledby="ocm-tab-brands"></div>
-        <div class="tab-pane fade" id="ocm-service" 
-             role="tabpanel" aria-labelledby="ocm-tab-service"></div>
+        <div sm-if="showBrands" class="tab-pane fade" id="ocm-brands" role="tabpanel" aria-labelledby="ocm-tab-brands"></div>
+        <div class="tab-pane fade" id="ocm-service" role="tabpanel" aria-labelledby="ocm-tab-service"></div>
     </div>
 
     <div sm-if="allowNavigation" class="offcanvas-menu-footer d-none">
