--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasWishlist.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasWishlist.cshtml
@@ -9,13 +9,12 @@
 }
 
 <div class="offcanvas-cart-body offcanvas-scrollable">
-
-    <div sm-if="!Model.Items.Any()" class="no-items">
+    <div sm-if="!Model.Items.Any()" class="no-items" role="status">
         <h4 class="no-item-title">
             @T("ShoppingCart.Mini.EmptyWishlist.Title")
         </h4>
         <p class="no-item-icon">
-            <i class="fal fa-heart fa-4x"></i>
+            <i class="fal fa-heart fa-4x" aria-hidden="true"></i>
         </p>
         <p class="no-item-info text-muted">
             @Html.Raw(T("ShoppingCart.Mini.EmptyWishlist.Info", "fal fa-lg fa-heart"))
@@ -28,7 +27,7 @@
         var currentItem = Model.Items.FirstOrDefault(x => x.CreatedOnUtc >= DateTime.UtcNow.AddSeconds(-2));
 
         <div sm-if="currentItem != null" class="alert alert-success alert-dismissible rounded-0 fade show" role="alert">
-            <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-dismiss="alert" aria-label="@T("Common.Close")"></button>
             <span sm-language-attributes-for="currentItem.ProductName">
                 @Html.Raw(T("ShoppingCart.Mini.AddedItemToWishlist", $"<strong>{currentItem.ProductName.Value.Truncate(50, "…")}</strong>"))
             </span>
@@ -41,7 +40,6 @@
 
                 <div class="offcanvas-cart-item">
                     <div class="row sm-gutters">
-
                         <div sm-if="Model.ShowProductImages" class="col col-alpha">
                             <a sm-if="item.Image.HasImage()" class="img-center-container" href="@item.ProductUrl" title="@item.Image.Title">
                                 <img sm-model="item.Image" attr-alt='(item.Image.Alt.IsEmpty(), item.ProductName)' />
@@ -49,7 +47,13 @@
                         </div>
 
                         <div class="col col-data">
-                            <a sm-language-attributes-for="item.ProductName" class="name fwm link-body link-dnu" href="@item.ProductUrl" title="@item.ProductName">@item.ProductName</a>
+                            <a sm-language-attributes-for="item.ProductName" 
+                               id="wishlist-item-link-@(item.Id)"
+                               class="name fwm link-body link-dnu" 
+                               href="@item.ProductUrl" 
+                               title="@item.ProductName">
+                                @item.ProductName
+                            </a>
                             <div sm-language-attributes-for="item.ShortDesc" class="short-desc text-muted">
                                 @Html.Raw(item.ShortDesc.Value.Truncate(descMaxLength, "…"))
                             </div>
@@ -62,11 +66,11 @@
                             <div sm-if="bundleItemsWithImages.Length > 0" class="mb-bundle-pictures mt-3">
                                 @for (var i = 0; i < bundleItemsWithImages.Length; ++i)
                                 {
-                                    var item = bundleItemsWithImages[i];
-                                    <a href="@item.ProductUrl" title="@item.ProductName" class="link-dnn">
-                                        <img sm-model="item.Image" attr-alt='(item.Image.Alt.IsEmpty(), item.ProductName)' />
+                                    var bundelItem = bundleItemsWithImages[i];
+                                    <a href="@bundelItem.ProductUrl" title="@bundelItem.ProductName" class="link-dnn">
+                                        <img sm-model="bundelItem.Image" attr-alt='(bundelItem.Image.Alt.IsEmpty(), bundelItem.ProductName)' />
                                     </a>
-                                    <i sm-if="(i + 1) < bundleItemsWithImages.Length" class="fa fa-plus"></i>
+                                    <i sm-if="(i + 1) < bundleItemsWithImages.Length" class="fa fa-plus" aria-hidden="true"></i>
                                 }
                             </div>
                         </div>
@@ -81,7 +85,9 @@
                                 { 
                                     data_update_url = Url.Action("UpdateCartItem", "ShoppingCart", new { isWishlist = true }), 
                                     data_type = "wishlist", 
-                                    data_sci_id = item.Id 
+                                    data_sci_id = item.Id,
+                                    id = $"o-wishlist-item-quantity-{item.Id}",
+                                    aria_labelledby = $"wishlist-item-link-{item.Id}"
                                 }
                             })
                         </div>
@@ -94,27 +100,28 @@
                         <div class="col-auto ml-auto text-nowrap">
                             @if (Model.ShowItemsFromWishlistToCartButton)
                             {
-                                <a class="btn btn-secondary btn-sm btn-icon ajax-cart-link" title='@T("ShoppingCart.AddToCart")'
-                                   href="#"
-                                   rel="nofollow"
-                                   data-href="@Url.Action("MoveItemBetweenCartAndWishlist", "ShoppingCart", new { cartItemId = item.Id, cartType = ShoppingCartType.Wishlist })"
-                                   data-name="@item.ProductName"
-                                   data-type="cart"
-                                   data-action="addfromwishlist">
-                                    <i class="fa fa-cart-arrow-down"></i>
-                                </a>
+                                <button class="btn btn-secondary btn-sm btn-icon ajax-cart-link" 
+                                        title='@T("ShoppingCart.AddToCart")'
+                                        aria-label="@T("ShoppingCart.AddToCart")"
+                                        type="button"
+                                        data-href="@Url.Action("MoveItemBetweenCartAndWishlist", "ShoppingCart", new { cartItemId = item.Id, cartType = ShoppingCartType.Wishlist })"
+                                        data-name="@item.ProductName"
+                                        data-type="cart"
+                                        data-action="addfromwishlist">
+                                    <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+                                </button>
                             }
 
-                            <a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
-                               href="#"
-                               rel="nofollow"
-                               data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id, isWishlist = true })'
-                               data-name="@item.ProductName"
-                               data-type="wishlist"
-                               data-action="remove"
-                               title='@T("Common.Remove")'>
-                                <i class="far fa-trash-can"></i>
-                            </a>
+                            <button class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
+                                    title='@T("Common.Remove")'
+                                    aria-label='@T("Common.Remove")'
+                                    type="button"
+                                    data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id, isWishlist = true })'
+                                    data-name="@item.ProductName"
+                                    data-type="wishlist"
+                                    data-action="remove">
+                                <i class="far fa-trash-can" aria-hidden="true"></i>
+                            </button>
                         </div>
 
                     </div>
@@ -129,7 +136,7 @@
 <div sm-if="Model.Items.Any()" class="offcanvas-cart-footer">
     <div class="offcanvas-cart-footer-row">
         <a class="btn btn-clear btn-block btn-action" asp-route="Wishlist">
-            <i class="fa fa-check"></i>
+            <i class="fa fa-check" aria-hidden="true"></i>
             <span>@T("Wishlist.Mini.ViewWishlist")</span>
         </a>
     </div>
