WCAG: Fixed label id mismatch

--- a/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.Date.cshtml
+++ b/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.Date.cshtml
@@ -7,7 +7,7 @@
 <input type="date"
        value='@(Model.SelectedDate != null ? ((DateTime)Model.SelectedDate).ToString("yyyy-MM-dd") : DateTime.UtcNow.ToString("yyyy-MM-dd"))'
        attr-disabled='(Model.IsDisabled, "disabled")'
-       name="@(controlId)-date" id="@(controlId)-date"
+       name="@(controlId)-date" id="@(controlId)"
        class="form-control native-validation skip-pd-ajax-update"
        min="@DateTime.Now.AddYears(-90).ToString("yyyy-MM-dd")"
        max="@DateTime.Now.AddYears(10).ToString("yyyy-MM-dd")" />
