--- a/src/Smartstore.Web/Views/Product/AskQuestion.cshtml
+++ b/src/Smartstore.Web/Views/Product/AskQuestion.cshtml
@@ -33,25 +33,28 @@
 
                 <div class="form-group">
                     <label asp-for="SenderEmail" class="col-form-label required"></label>
-                    <input asp-for="SenderEmail" type="email" />
+                    <input asp-for="SenderEmail" type="email" sm-required="true" autocomplete="email" />
                     <span asp-validation-for="SenderEmail"></span>
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="SenderName" class="col-form-label@(Model.SenderNameRequired ? " required" : "")"></label>
-                    <input asp-for="SenderName" type="text" />
+                    <label asp-for="SenderName" class="col-form-label@(Model.SenderNameRequired ? " required" : string.Empty)"></label>
+                    <input asp-for="SenderName" type="text" sm-required="Model.SenderNameRequired" autocomplete="name" />
                     <span asp-validation-for="SenderName"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="SenderPhone" class="col-form-label"></label>
-                    <input asp-for="SenderPhone" type="tel" placeholder="@T("Common.Optional")" />
+                    <input asp-for="SenderPhone" type="tel" placeholder="@T("Common.Optional")" autocomplete="tel" />
                     <span asp-validation-for="SenderPhone"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Question" class="col-form-label required"></label>
-                    <textarea asp-for="Question" placeholder="@T("Products.EmailAFriend.PersonalMessage.Hint")" class="personal-message"></textarea>
+                    <textarea asp-for="Question" 
+                              sm-required="true"
+                              placeholder="@T("Products.EmailAFriend.PersonalMessage.Hint")" 
+                              class="personal-message"></textarea>
                     <span asp-validation-for="Question"></span>
                 </div>
 
@@ -68,7 +71,7 @@
                 <div class="control-group">
                     <div class="controls">
                         <button type="submit" name="send-email" class="btn btn-primary">
-                            <i class="fa fa-caret-right"></i>
+                            <i class="fa fa-caret-right" aria-hidden="true"></i>
                             <span>@T("Common.Send")</span>
                         </button>
                     </div>
