WCAG: Fixed 1.3.1 "Info & Relationships" violation

--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
@@ -24,7 +24,7 @@
         </button>
     </div>
     <span class="input-group-icon instasearch-icon">
-        <button id="pd-assoc-search-btn" type="submit" class="instasearch-submit input-clear bg-transparent" aria-label="@T("Common.Search")" tabindex="-1">
+        <button id="pd-assoc-search-btn" type="submit" class="instasearch-submit input-clear bg-transparent" tabindex="-1" aria-hidden="true">
             <i class="fa fa-magnifying-glass" aria-hidden="true"></i>
         </button>
     </span>
