--- a/src/Smartstore.Web/Views/Shared/Components/SearchBox/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/SearchBox/Default.cshtml
@@ -30,8 +30,8 @@
         </button>
     </div>
     <span class="input-group-icon instasearch-icon">
-        <button type="submit" class="instasearch-submit input-clear bg-transparent" aria-label="@T("Common.Search")" tabindex="-1">
-            <i class="fa fa-magnifying-glass" aria-hidden="true"></i>
+        <button type="submit" class="instasearch-submit input-clear bg-transparent" tabindex="-1" aria-hidden="true">
+            <i class="fa fa-magnifying-glass"></i>
         </button>
     </span>
     <div class="instasearch-drop">
