--- a/src/Smartstore.Web/Views/Product/BackInStockSubscribePopup.cshtml
+++ b/src/Smartstore.Web/Views/Product/BackInStockSubscribePopup.cshtml
@@ -1,48 +1,65 @@
-﻿@using Smartstore.Web.Models.Catalog;
+﻿@using Smartstore.Web.Models.Catalog
 
 @model BackInStockSubscribeModel
 
 @{
     Layout = "_Layout.Popup";
+
+    var isSubscribed = Model.AlreadySubscribed;
+    string warning = null;
+    if (!Model.SubscriptionAllowed)
+    {
+        warning = T("BackInStockSubscriptions.NotAllowed");
+    }
+    else if (!Model.IsCurrentCustomerRegistered)
+    {
+        warning = T("BackInStockSubscriptions.OnlyRegistered");
+    }
+    else if (!isSubscribed && Model.CurrentNumberOfBackInStockSubscriptions >= Model.MaximumBackInStockSubscriptions)
+    {
+        warning = T("BackInStockSubscriptions.MaxSubscriptions", Model.MaximumBackInStockSubscriptions.ToString("N0"));
+    }
 }
 
 <form asp-action="BackInStockSubscribePopup" asp-route-id="@Model.ProductId" id="back-in-stock-subscription-form" method="post">
     <div class="page back-in-stock-subscription-page">
         <div class="page-title">
             <h4>
-                @T(Model.AlreadySubscribed ? "BackInStockSubscriptions.AlreadySubscribed" : "BackInStockSubscriptions.PopupTitle")
+                @T(isSubscribed ? "BackInStockSubscriptions.Unsubscribe" : "BackInStockSubscriptions.PopupTitle")
             </h4>
         </div>
         <div class="page-body">
-            @if (!Model.SubscriptionAllowed)
+            <div sm-if="isSubscribed" class="alert alert-warning" role="alert">
+                @T("BackInStockSubscriptions.AlreadySubscribed")
+            </div>
+            @if (warning.HasValue())
             {
-                <div>@T("BackInStockSubscriptions.NotAllowed")</div>
-            }
-            else if (!Model.IsCurrentCustomerRegistered)
-            {
-                <div>@T("BackInStockSubscriptions.OnlyRegistered")</div>
-            }
-            else if (!Model.AlreadySubscribed && Model.CurrentNumberOfBackInStockSubscriptions >= Model.MaximumBackInStockSubscriptions)
-            {
-                <div>@T("BackInStockSubscriptions.MaxSubscriptions", Model.MaximumBackInStockSubscriptions)</div>
+                <div class="alert alert-warning" role="alert">@warning</div>
             }
             else
             {
-                <p sm-if="!Model.AlreadySubscribed" class="x-tooltip fs-h5">@T("BackInStockSubscriptions.Tooltip")</p>
-
-                <button type="submit" id="back-in-stock-notify-me" class="mt-2 btn btn-lg btn-@(Model.AlreadySubscribed ? "danger" : "success")">
-                    @T(Model.AlreadySubscribed ? "BackInStockSubscriptions.Unsubscribe" : "BackInStockSubscriptions.NotifyMe")
-                </button>
+                if (isSubscribed)
+                {
+                    <button id="back-in-stock-notify-me" type="submit" class="mt-2 btn btn-lg btn-danger">
+                        @T("BackInStockSubscriptions.Unsubscribe")
+                    </button>
+                }
+                else
+                {
+                    <p id="back-in-stock-tooltip" class="x-tooltip fs-h5">@T("BackInStockSubscriptions.Tooltip")</p>
+                    <button id="back-in-stock-notify-me" type="submit" class="mt-2 btn btn-lg btn-success" aria-describedby="back-in-stock-tooltip">
+                        @T("BackInStockSubscriptions.NotifyMe")
+                    </button>
+                }
 
                 <script sm-target-zone="scripts" data-origin="stock-subscription">
                     $(function () {
-                        $("#back-in-stock-notify-me").click(function (e) {
+                        $("#back-in-stock-notify-me").on('click', function () {
                             parent.$(".modal").modal("hide");
                         });
                     });
                 </script>
             }
-
         </div>
     </div>
 </form>
