WCAG: Minor PrDetail fixes (Score: 97!)

--- a/src/Smartstore.Web/Views/Product/Partials/Product.RelatedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.RelatedProducts.cshtml
@@ -11,7 +11,7 @@
 
 <div class="pd-related-products block block-boxed mb-3">
     <div class="block-title">
-        <h3>@T("Products.RelatedProducts")</h3>
+        <h2 class="fs-h3">@T("Products.RelatedProducts")</h2>
     </div>
     <div class="block-body pt-0">
         <div class="artlist-carousel">
