--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.cshtml
@@ -41,22 +41,19 @@
 
         var colspan = (int)Model.GridColumnSpan;
         listCssClasses.Add("artlist-{0}-cols".FormatInvariant(colspan));
-    } 
-}
+    }
 
-@if (Model.ViewMode == ProductSummaryViewMode.List)
-{
-    var maxPictureSize = Model.ThumbSize ?? Model.Items.Select(x => x.Image)
-        .Where(x => x != null)
-        .Max(x => x.ThumbSize);
-
-    if (maxPictureSize.HasValue)
+    string artPictureWidth = null;
+    if (Model.ViewMode == ProductSummaryViewMode.List)
     {
-        <style type="text/css">
-		#@id .art-picture-block {
-			width: @("{0}px".FormatInvariant(maxPictureSize.Value));
-		}
-        </style>
+        var maxPictureSize = Model.ThumbSize ?? Model.Items.Select(x => x.Image)
+            .Where(x => x != null)
+            .Max(x => x.ThumbSize);
+
+        if (maxPictureSize.HasValue)
+        {
+            artPictureWidth = $"--art-picture-width: {maxPictureSize.Value}px";
+        }
     }
 }
 
@@ -82,11 +79,12 @@
     <partial name="Search.ActiveFilters" model="Model.SourceResult" />
 }
 
-<div sm-if="Model.PagedList.TotalCount > 0" 
-     id="@id" 
+<div sm-if="Model.PagedList.TotalCount > 0"
+     id="@id"
      class='@string.Join(" ", listCssClasses)'
      data-label-prev="@T("Aria.Label.ShowPreviousProducts")"
      data-label-next="@T("Aria.Label.ShowNextProducts")"
+     attr-style='(artPictureWidth.HasValue(), artPictureWidth)'
      role="list">
     @foreach (var product in Model.Items)
     {
