WCAG: Photoswipe - UI enhancements, focus styling & fixes

--- a/src/Smartstore.Web/Views/Shared/Partials/PhotoSwipe.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/PhotoSwipe.cshtml
@@ -8,13 +8,13 @@
             <div class="pswp__item"></div>
         </div>
         <div class="pswp__ui pswp__ui--hidden">
-            <div class="pswp__top-bar clearfix">
+            <div class="pswp__top-bar hstack">
                 <div class="pswp__counter"></div>
-                <div class="pswp__zoom-controls">
-                    <button class="pswp__button pswp-action pswp__button--zoom" title="Zoom in/out"></button>
+                <div class="pswp__zoom-controls hstack">
                     <button class="pswp__button pswp-action pswp__button--fs" title="Toggle fullscreen"></button>
+                    <button class="pswp__button pswp-action pswp__button--zoom" title="Zoom in/out"></button>
                 </div>
-                <button class="pswp__button pswp__button--close" title="Close (Esc)">&#215;</button>
+                <button class="pswp__button pswp__button--close ml-auto" title="Close (Esc)">&#215;</button>
                 <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
                 <!-- element will get class pswp__preloader--active when preloader is running -->
                 <div class="pswp__preloader">
