--- a/src/Smartstore.Web/wwwroot/skinning/_photoswipe.scss
+++ b/src/Smartstore.Web/wwwroot/skinning/_photoswipe.scss
@@ -51,39 +51,25 @@ $pswp__background-color: #fff;
     background: transparent;
     cursor: pointer;
     overflow: visible;
-    -webkit-appearance: none;
+    appearance: none;
     border: 0;
     padding: 0;
     margin: 0;
-    float: right;
     opacity: 0.75;
     transition: opacity 0.1s ease-in-out, background-color 0.1s ease-in-out;
     box-shadow: none;
-    color: #777;
     color: inherit;
+    border-radius: 50%;
 
-    &:focus,
     &:hover {
         background: rgba($black, 0.08);
-    }
-
-    &:active {
-        background: rgba($black, 0.12);
-    }
-
-    &:focus,
-    &:hover {
         opacity: 0.85 !important;
     }
 
     &:active {
+        background: rgba($black, 0.12);
         outline: none;
         opacity: 1 !important;
-    }
-
-    &::-moz-focus-inner {
-        padding: 0;
-        border: 0
     }
 }
 
@@ -98,12 +84,6 @@ $pswp__background-color: #fff;
     padding-bottom: 7px;
     font-weight: $font-weight-medium;
     margin-left: 2rem;
-
-    &:focus,
-    &:hover,
-    &:active {
-        background: $light;
-    }
 }
 
 .pswp__button--fs {
@@ -139,11 +119,8 @@ $pswp__background-color: #fff;
 }
 
 /* no arrows on touch screens */
-.pswp--touch {
-    .pswp__button--arrow--left,
-    .pswp__button--arrow--right {
-        visibility: hidden;
-    }
+.pswp--touch .pswp-arrow {
+    visibility: hidden;
 }
 
 /*
@@ -151,8 +128,7 @@ $pswp__background-color: #fff;
 	(icon is added to :before pseudo-element)
 */
 
-.pswp__button--arrow--left,
-.pswp__button--arrow--right {
+.pswp-arrow {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -160,6 +136,7 @@ $pswp__background-color: #fff;
     height: 60px;
     font-size: 30px;
     padding: 0;
+    margin-inline: 0.375rem;
 }
 
 .pswp__button--arrow--left {
@@ -186,8 +163,6 @@ $pswp__background-color: #fff;
  */
 
 .pswp__counter {
-    -webkit-user-select: none;
-    -moz-user-select: none;
     user-select: none;
 }
 
@@ -199,7 +174,6 @@ $pswp__background-color: #fff;
 
 .pswp__counter {
     position: relative;
-    float: left;
     width: 80px;
     height: 40px;
     font-size: inherit;
@@ -212,8 +186,7 @@ $pswp__background-color: #fff;
 
 .pswp__zoom-controls {
     position: relative;
-    float: left;
-    height: 40px;
+    //height: 40px;
 }
 
 
@@ -345,7 +318,6 @@ $pswp__background-color: #fff;
         left: auto;
         top: auto;
         margin: 0;
-        float: right;
     }
 }
 
@@ -393,23 +365,21 @@ $pswp__background-color: #fff;
     position: absolute;
     left: 0;
     top: 0;
-    height: 40px;
+    //height: 40px;
     width: 100%;
+    padding: .25rem;
 }
 
 .pswp__caption,
 .pswp__top-bar {
-    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
     will-change: opacity;
     transition: opacity $pswp__controls-transition-duration cubic-bezier(.4,0,.22,1);
 }
 
 /* pswp--has_mouse class is added only when two subsequent mousemove events occur */
-.pswp--has_mouse {
-    .pswp__button--arrow--left,
-    .pswp__button--arrow--right {
-        visibility: visible;
-    }
+.pswp--has_mouse .pswp-arrow { 
+    visibility: visible;
 }
 
 .pswp__top-bar,
@@ -419,8 +389,7 @@ $pswp__background-color: #fff;
 
 /* pswp__ui--fit class is added when main image "fits" between top bar and bottom bar (caption) */
 .pswp__ui--fit {
-    .pswp__top-bar,
-    .pswp__caption {
+    :is(.pswp__top-bar, .pswp__caption) {
         background-color: rgba($white, 0.3);
     }
 }
@@ -428,12 +397,8 @@ $pswp__background-color: #fff;
 /* pswp__ui--idle class is added when mouse isn't moving for several seconds (JS option timeToIdle) */
 
 .pswp__ui--idle {
-    .pswp__top-bar {
-        opacity: 0;
-    }
-
-    .pswp__button--arrow--left,
-    .pswp__button--arrow--right {
+    .pswp__top-bar:not(:focus-within),
+    .pswp-arrow:not(:focus-visible) {
         opacity: 0;
     }
 }
@@ -443,10 +408,7 @@ $pswp__background-color: #fff;
 	e.g. when user taps to toggle visibility of controls
 */
 .pswp__ui--hidden {
-    .pswp__top-bar,
-    .pswp__caption,
-    .pswp__button--arrow--left,
-    .pswp__button--arrow--right {
+    :is(.pswp__top-bar, .pswp__caption, .pswp-arrow) {
         /* Force paint & create composition layer for controls. */
         opacity: 0.001;
     }
@@ -454,9 +416,7 @@ $pswp__background-color: #fff;
 
 /* pswp__ui--one-slide class is added when there is just one item in gallery */
 .pswp__ui--one-slide {
-    .pswp__button--arrow--left,
-    .pswp__button--arrow--right,
-    .pswp__counter {
+    :is(.pswp__counter, .pswp-arrow) {
         display: none;
     }
 }
