--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_footer.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_footer.scss
@@ -129,7 +129,10 @@
 .footer-social .btn-social {
     display: inline-block;
     border-color: transparent !important;
-    box-shadow: none;
     margin: 0.2rem 0.25rem;
     font-size: 16px;
+
+    &:not(:focus-visible) {
+        box-shadow: none;
+    }
 }
