--- a/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.CheckRadio.cshtml
+++ b/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.CheckRadio.cshtml
@@ -9,34 +9,36 @@
     // TODO: (mc) Replace .checkbox with .form-check
 }
 
-@foreach (var item in items)
-{
-    var checkId = controlId + "_" + item.Id;
-    var hasColor = item.Color.HasValue() && item.Color != "transparent";
-    <div class="form-check" title="@item.Title.NullEmpty()" attr-role='(type == "radio", "radiogroup")' attr-aria-orientation='(type == "radio", "vertical")'>
-        <input class="form-check-input" type="@type" id="@checkId" name="@controlId" value="@item.Id" 
-               attr-checked='(item.IsPreSelected, "checked")' attr-disabled='(item.IsDisabled, "disabled")' />
+<div attr-role='(type == "radio", "radiogroup")' attr-aria-orientation='(type == "radio", "vertical")'>
+    @foreach (var item in items)
+    {
+        var checkId = controlId + "_" + item.Id;
+        var hasColor = item.Color.HasValue() && item.Color != "transparent";
+        <div class="form-check" title="@item.Title.NullEmpty()">
+            <input class="form-check-input" type="@type" id="@checkId" name="@controlId" value="@item.Id"
+                   attr-checked='(item.IsPreSelected, "checked")' attr-disabled='(item.IsDisabled, "disabled")' />
 
-        <label class="form-check-label choice-item@(item.IsUnavailable ? " choice-item-unavailable" : "")" for="@checkId">
-            @if (item.ImageUrl.HasValue())
-            {
-                if (item.SeName.HasValue())
+            <label class="form-check-label choice-item@(item.IsUnavailable ? " choice-item-unavailable" : "")" for="@checkId">
+                @if (item.ImageUrl.HasValue())
                 {
-                    <a asp-route="Product" asp-route-SeName="@item.SeName" class="choice-item-img" >
-                        <img src="@item.ImageUrl" alt="@item.Name" />
-                    </a>
+                    if (item.SeName.HasValue())
+                    {
+                        <a asp-route="Product" asp-route-SeName="@item.SeName" class="choice-item-img">
+                            <img src="@item.ImageUrl" alt="@item.Name" />
+                        </a>
+                    }
+                    else
+                    {
+                        <img class="choice-item-img" src="@item.ImageUrl" alt="@item.Name" />
+                    }
                 }
-                else
+                else if (hasColor)
                 {
-                    <img class="choice-item-img" src="@item.ImageUrl" alt="@item.Name" />
+                    <span class="choice-item-color" style="background-color: @item.Color"></span>
                 }
-            }
-            else if (hasColor)
-            {
-                <span class="choice-item-color" style="background-color: @item.Color"></span>
-            }
 
-            @item.GetItemLabel()
-        </label>
-    </div>
-}
+                @item.GetItemLabel()
+            </label>
+        </div>
+    }
+</div>
